<resources>
    <string name="app_name">GradingApp</string>
    <string name="enter_grades">Enter Grades</string>
    <string name="enter_improvement">Enter Improvement</string>
    <string name="search_grade">Search Grade</string>
    <string name="list_students">List Students</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="program">Program</string>
    <string name="enter_program">Enter Program</string>
    <string name="enter_course1_grade">Enter Course1 Grade</string>
    <string name="course2">Course2</string>
    <string name="enter_course2_grade">Enter Course2 Grade</string>
    <string name="course3">Course3</string>
    <string name="enter_course3_grade">Enter Course3 Grade</string>
    <string name="course4">Course4</string>
    <string name="enter_course4_grade">Enter Course4 Grade</string>
    <string name="submit">Submit</string>


    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="grading_app">Grading App</string>
    <string name="student_id">Student Id</string>
    <string name="enter_student_id">Enter Student Id</string>
    <string name="improvement_mark">Improvement Mark</string>
    <string name="enter_the_mark">Enter the Mark</string>
    <string name="course1">Course1</string>
    <string name="search">Search</string>
    <string name="student_name">Student Name</string>
    <string name="total">Total</string>
    <string name="id">Id</string>
    <string name="keep_track_of_student_grades">Keep Track Of Student Grades</string>

    <string-array name="course_array">
        <item>course1</item>
        <item>course2</item>
        <item>course3</item>
        <item>course4</item>
    </string-array>
</resources>