<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterImpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/enter_improvement"
            android:textColor="@color/white"

            android:layout_marginTop="100dp"
            android:textSize="25dp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_id"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/edtStdId"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:background="@drawable/border"
            android:hint="@string/enter_student_id" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Courses"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:textStyle="bold"
            />

        <Spinner
            android:id="@+id/spnCourse"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:background="@drawable/edit_text_border"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/improvement_mark"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/edtMark"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:background="@drawable/border"
            android:hint="@string/enter_the_mark" />
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </LinearLayout>

</FrameLayout>