<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListStudentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="List of Students"
            android:textColor="@color/white"

            android:layout_marginTop="100dp"
            android:textSize="25dp"
            android:textStyle="bold"
            />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:text="@string/id"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:text="@string/name"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:text="@string/program"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:text="@string/course1"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:text="@string/course2"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:text="@string/course3"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:text="@string/course4"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:text="@string/total"
                        android:textColor="@color/white" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp" />
            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

</FrameLayout>