<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchGradeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/search_grade"
            android:textColor="@color/white"

            android:layout_marginTop="100dp"
            android:textSize="35dp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_id"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/edtStdId"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:background="@drawable/border"
            android:hint="@string/enter_student_id" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/program"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/txtProgram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/course1"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/txtCourse1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/course2"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/txtCourse2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/course3"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/txtCourse3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/course4"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/txtCourse4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>